<resources>
    <string name="app_name">TimelinePictureAndroidApp</string>
    <string name="app_photo">Take a Photo</string>

    <!--Main screen-->
    <string name="take_photo_string">Take A Photo</string>
    <string name="view_photos_string">View Photos</string>
    <string name="view_map_string">View Map</string>

    <!--Take photo-->
    <string name="or_string">Or</string>
    <string name="update_this_string">Update This</string>

    <!--Photo info edit-->
    <string name="photo_info_edit_name_title">Name</string>
    <string name="photo_info_edit_name_hint">Write a name...</string>
    <string name="photo_info_edit_info_title">Info</string>
    <string name="photo_info_edit_info_hint">Write some details...</string>
    <string name="photo_info_edit_save_photo">Save Picture</string>
    <string name="photo_info_edit_retake_photo">Retake Picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="slider_desc">
        <item>20</item>
        <item>150</item>
    </string-array>

</resources>