<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/main_screen_take_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@android:drawable/ic_menu_camera"
        android:text="@string/take_photo_string"
        app:layout_constraintBottom_toTopOf="@+id/main_screen_view_map_button"
        app:layout_constraintEnd_toStartOf="@+id/main_screen_view_photos_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_screen_view_photos_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@android:drawable/ic_menu_gallery"
        android:text="@string/view_photos_string"
        app:layout_constraintBottom_toTopOf="@+id/main_screen_view_map_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_screen_take_photo_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_screen_view_map_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableTop="@android:drawable/ic_dialog_map"
        android:text="@string/view_map_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_screen_view_photos_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/main_screen_take_photo_button"
        app:layout_constraintTop_toBottomOf="@+id/main_screen_take_photo_button" />
</androidx.constraintlayout.widget.ConstraintLayout>